=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 v1.022 - Under Development

=over

=item *

Fixed a bug where Krang::ElementClass would complain about a missing
template for a sub-element that wasn't actually needed. [Sam]

=item *

Fixed a bug related to the internal tracking of assets in
L<Krang::Publisher>.  This finishes up a minor restructuring that
ensures C<krang_publish> publishes each story/media object only once
during a publish run. [Peter]

=item *

Fixed a bug in C<krang_publish>.  When publishing with the
C<--site_id> argument, all media objects under that site are now
published, not just those media objects linked to stories. [Peter]

=item *

Cleaned up the code handling the management of internal asset lists in
L<Krang::Publisher>.  This code is used to ensure the same asset is
not published more than once during a publish run. [Peter]

=item *

Added support for searching on C<site_id> in Krang::Media->find().
[Peter]

=item *

Added C<publish_category_per_page()> to
L<Krang::ElementClass::TopLevel>.  This method will soon be used by
L<Krang::Publisher> to determine whether or not to publish category
elements once for each page in a story, or once for all pages in a
story.  [Peter]

=item *

Added automatic height and width data to the Default::image element. 
[Perrin]

=back

=head2 v1.021 - July 21, 2004

=over

=item *

Upped Apache timeout from 30 to 600.  30 seconds was too short to
preview some extremely large stories.  [Peter]

=item *

Errors writing to the filesystem while executing a preview/publish
through the Krang UI are now logged properly in C<logs/krang.log>.
Previously, they were only reported in user-friendly (as opposed to
admin-friendly) fashion to the UI.  [Peter]

=item *

Added indexes on the C<class> and C<published_version> columns in the
C<story> table.  This greatly speeds up searches against these fields.
[Sam]

=item *

Added new method C<use_category_templates()> to