@@ -4,3 +4,4 @@ THIS IS HEADS
 <tmpl_if category><tmpl_var category></tmpl_if>
 THIS IS TAILS
 <tmpl_if paragraph><tmpl_var paragraph></tmpl_if>
+<tmpl_if page_number>page number=<tmpl_var page_number> total=<tmpl_var total_pages></tmpl_if>
